--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.0",
     "superagent": "~1.4.0"
-  },
-  "devDependencies": {
     "less": "^2.5.1",
     "less-loader": "^2.2.1",
     "debug": "^2.2.0",
@@ -47,13 +45,15 @@
     "eslint-plugin-react": "^3.4.2",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
-    "nodemon": "^1.7.0",
-    "react-hot-loader": "^1.3.0",
     "strip-loader": "^0.1.0",
     "style-loader": "^0.12.4",
-    "webpack-dev-server": "^1.11.0",
     "webpack-error-notification": "^0.1.4",
     "webpack-stats-plugin": "^0.1.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^1.11.0",
+    "react-hot-loader": "^1.3.0",
+    "nodemon": "^1.7.0"
   },
   "engines": {
     "node": "0.10.x"
