--- a/package.json
+++ b/package.json
@@ -14,39 +14,41 @@
     "prod": "NODE_ENV=production PORT=8080 DEBUG=app node index",
     "start": "NODE_ENV=production node index",
     "postinstall": "npm run build",
-    "lint": "eslint index.js app webpack server"
+    "lint": "eslint index.js app/user-details webpack server"
   },
   "author": "Pavel Eremin",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer-loader": "^3.1.0",
     "babel": "^5.8.21",
     "babel-core": "5.8.22",
-    "babel-eslint": "4.0.10",
+    "babel-eslint": "^4.0.10",
     "babel-loader": "5.3.2",
     "bootstrap": "~3.3.5",
+    "clean-webpack-plugin": "^0.1.3",
     "compression": "^1.5.2",
     "cookie-parser": "^1.4.0",
+    "css-loader": "^0.18.0",
+    "debug": "^2.2.0",
+    "eslint": "^1.5.0",
+    "eslint-plugin-react": "^3.4.2",
     "express": "4.13.3",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
     "font-awesome": "~4.4.0",
+    "less": "^2.5.1",
+    "less-loader": "^2.2.1",
+    "lodash": "^3.10.1",
+    "moment": "^2.10.6",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.0",
-    "superagent": "~1.4.0",
-    "less": "^2.5.1",
-    "less-loader": "^2.2.1",
-    "debug": "^2.2.0",
-    "autoprefixer-loader": "^3.1.0",
-    "babel-eslint": "^4.0.10",
-    "clean-webpack-plugin": "^0.1.3",
-    "css-loader": "^0.18.0",
-    "eslint": "^1.5.0",
-    "eslint-plugin-react": "^3.4.2",
-    "extract-text-webpack-plugin": "^0.8.2",
-    "file-loader": "^0.8.4",
     "strip-loader": "^0.1.0",
     "style-loader": "^0.12.4",
+    "superagent": "~1.4.0",
+    "superagent-jsonp": "0.0.5",
     "webpack-error-notification": "^0.1.4",
     "webpack-stats-plugin": "^0.1.0"
   },
