--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prod": "NODE_ENV=production PORT=8080 DEBUG=app node index",
     "start": "NODE_ENV=production node index",
     "postinstall": "npm run build",
-    "lint": "eslint index.js app/user-details webpack server"
+    "lint": "eslint index.js app webpack server"
   },
   "author": "Pavel Eremin",
   "license": "ISC",
@@ -22,7 +22,7 @@
     "autoprefixer-loader": "^3.1.0",
     "babel": "^5.8.21",
     "babel-core": "5.8.22",
-    "babel-eslint": "^4.0.10",
+    "babel-eslint": "^4.1.3",
     "babel-loader": "5.3.2",
     "bootstrap": "~3.3.5",
     "clean-webpack-plugin": "^0.1.3",
@@ -43,6 +43,7 @@
     "moment": "^2.10.6",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
+    "reflux": "^0.2.12",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.0",
