--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "font-awesome": "~4.4.0",
+    "history": "^1.11.1",
     "less": "^2.5.1",
     "less-loader": "^2.2.1",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
     "react": "^0.13.3",
-    "react-router": "^0.13.3",
+    "react-router": "^1.0.0-rc1",
     "reflux": "^0.2.12",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.3.0",
