--- a/package.json
+++ b/package.json
@@ -8,43 +8,48 @@
     "url": "https://github.com/paveleremin/express-react-es6.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --stats --config ./webpack/config.prod.js",
-    "dev": "NODE_ENV=development DEBUG=app nodemon index",
-    "prod": "NODE_ENV=production PORT=8080 DEBUG=app node index",
-    "start": "NODE_ENV=production node index",
+    "test": "echo 'Error: no test specified' && exit 1",
+    "build": "./node_modules/.bin/webpack --stats --config ./webpack/config.build.js",
+    "dev": "NODE_ENV=development DEBUG=app ./node_modules/.bin/nodemon index --harmony",
+    "prod": "NODE_ENV=production PORT=3000 DEBUG=app node index --harmony",
+    "start": "NODE_ENV=production node index --harmony",
     "postinstall": "npm run build",
-    "lint": "eslint index.js app webpack server"
+    "lint": "./node_modules/.bin/eslint index.js app webpack server"
+  },
+  "engines": {
+    "node": "^4.1.2",
+    "npm": "^3.3.5"
   },
   "author": "Pavel Eremin",
   "license": "ISC",
   "dependencies": {
     "autoprefixer-loader": "^3.1.0",
-    "babel": "^5.8.21",
-    "babel-core": "5.8.22",
+    "babel": "^5.8.23",
     "babel-eslint": "^4.1.3",
-    "babel-loader": "5.3.2",
+    "bluebird": "^2.10.2",
     "bootstrap": "~3.3.5",
     "clean-webpack-plugin": "^0.1.3",
     "compression": "^1.5.2",
+    "cookie": "^0.2.2",
     "cookie-parser": "^1.4.0",
-    "css-loader": "^0.18.0",
+    "css-loader": "^0.19.0",
     "debug": "^2.2.0",
     "es6-promise": "^3.0.2",
-    "eslint": "^1.5.0",
-    "eslint-plugin-react": "^3.4.2",
-    "express": "4.13.3",
+    "eslint": "^1.6.0",
+    "eslint-plugin-react": "^3.5.1",
+    "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "font-awesome": "~4.4.0",
-    "history": "^1.11.1",
+    "history": "^1.12.5",
     "less": "^2.5.1",
     "less-loader": "^2.2.1",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
-    "react": "^0.13.3",
-    "react-router": "^1.0.0-rc1",
-    "reflux": "^0.2.12",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-router": "^1.0.0-rc3",
+    "reflux": "^0.2.13",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.0",
@@ -52,15 +57,13 @@
     "style-loader": "^0.12.4",
     "superagent": "~1.4.0",
     "superagent-jsonp": "0.0.5",
+    "webpack": "^1.12.2",
     "webpack-error-notification": "^0.1.4",
     "webpack-stats-plugin": "^0.1.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^1.11.0",
+    "webpack-dev-server": "^1.12.0",
     "react-hot-loader": "^1.3.0",
-    "nodemon": "^1.7.0"
-  },
-  "engines": {
-    "node": "0.10.x"
+    "nodemon": "^1.7.1"
   }
 }
