--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
     "test": "echo 'Error: no test specified' && exit 1",
     "build": "./node_modules/.bin/webpack --stats --config ./webpack/config.build.js",
     "dev": "NODE_ENV=development DEBUG=app ./node_modules/.bin/nodemon index --harmony",
-    "prod": "NODE_ENV=production PORT=3000 DEBUG=app node index --harmony",
+    "prod": "NODE_ENV=production DEBUG=app node index --harmony",
     "start": "NODE_ENV=production node index --harmony",
     "postinstall": "npm run build",
     "lint": "./node_modules/.bin/eslint index.js app webpack server"
   },
   "engines": {
     "node": "^4.1.2",
-    "npm": "^3.3.5"
+    "npm": "^3.3.6"
   },
   "author": "Pavel Eremin",
   "license": "ISC",
   "dependencies": {
     "autoprefixer-loader": "^3.1.0",
-    "babel": "^5.8.23",
+    "babel-core": "^5.8.25",
     "babel-eslint": "^4.1.3",
+    "babel-loader": "^5.3.2",
     "bluebird": "^2.10.2",
     "bootstrap": "~3.3.5",
     "clean-webpack-plugin": "^0.1.3",
